k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aegis-ingress
  labels:
    app: aegis
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Routes API calls to backend gateway
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000
          
          # Routes Health checks directly to gateway
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000

          # Routes base web requests to frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
